update course and group api document
